test/files/pos/t5760-pkgobj-warn/stalepkg_1.scala

package object stalepkg {
  class Foo
}

package stalepkg {
  object Test {
    def main(args: Array[String]) {
    }
  }
}
