test/files/neg/t5760-pkgobj-warn/stalepkg_2.scala

package object stalepkg {
}

package stalepkg {
  class Foo
  object Test {
    def main(args: Array[String]) {
    }
  }
}
